minikube-Lab/main.tf
# Provider configuration for AWS
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 6.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
}

# Backend configuration for Terraform state
terraform {
  backend "s3" {
    bucket = "arup-lab-aws-training"
    key    = "minikube/terraform.tfstate"
    region = "us-east-1"
    encrypt = true
    use_lockfile = true
  }
}

# tags for all resources

variable "tags" {
  type = map(string)
  default = {
    Environment = "Lab"
    Project     = "MiniKube"
    Owner       = "Arup"
  }
}

# VPC configuration
resource "aws_vpc" "minikube_vpc" {
  cidr_block = "10.0.0.0/16"
  tags       = var.tags
}

# Subnet configuration
resource "aws_subnet" "minikube_subnet" {
  vpc_id            = aws_vpc.minikube_vpc.id
  cidr_block        = "10.0.5.0/24"
  availability_zone = "us-east-1a"
  tags              = var.tags
}

# Internet Gateway configuration
resource "aws_internet_gateway" "minikube_igw" {
  vpc_id = aws_vpc.minikube_vpc.id
  tags   = var.tags
}

# Route Table configuration
resource "aws_route_table" "minikube_route_table" {
  vpc_id = aws_vpc.minikube_vpc.id
  tags   = var.tags
}

# Route configuration to allow internet access
resource "aws_route" "minikube_route" {
  route_table_id         = aws_route_table.minikube_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.minikube_igw.id
}

# Associate the route table with the subnet
resource "aws_route_table_association" "minikube_route_table_association" {
  subnet_id      = aws_subnet.minikube_subnet.id
  route_table_id = aws_route_table.minikube_route_table.id
}

# Security Group configuration
resource "aws_security_group" "sg_minikube" {
    name        = "minikube-sg"
    description = "Security group for MiniKube lab"
    vpc_id      = aws_vpc.minikube_vpc.id
    tags        = merge(
        var.tags,
        {
            Name = "minikube-sg"
        }
    ) # Merge default tags with a specific Name tag for the security group
    
    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["104.30.167.32/32"] # Allow SSH from Arup's IP
    }
    ingress {
        from_port   = 8443
        to_port     = 8443
        protocol    = "tcp"
        cidr_blocks = ["104.30.167.32/32"] # Allow minikube from Arup's IP
    }
    ingress {
        from_port   = 30000
        to_port     = 32767
        protocol    = "tcp"
        cidr_blocks = ["104.30.167.32/32"] # Allow minikube from Arup's IP
    }
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

# EC2 Instance configuration for MiniKube
resource "aws_instance" "minikube_instance" {
    ami           = "ami-0c94855ba95c71c99" # Amazon Linux 2 AMI
    instance_type = "t2.medium"
    subnet_id     = aws_subnet.minikube_subnet.id
    security_groups = [aws_security_group.sg_minikube.id]
    tags          = var.tags
    associate_public_ip_address = true
    key_name = "server01" # Replace with your actual key pair name
    user_data = file("${path.module}/install-minikube.sh") # Script to install MiniKube on the EC2 instance
    }

# Output the public IP of the EC2 instance
output "minikube_instance_public_ip" {
  value = aws_instance.minikube_instance.public_ip
}
